<resources>
    <string name="app_name">Feedfold</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">6gGhSLzChix6nIADmZE4wzQTG</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">F0I8xRDqtXqoBMwvGUutQR8mZ1lEUg1HmA318VdzTiG2s2mfef</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
